<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="androidx.core.content.ContextCompat" />
        <variable
            name="contravention"
            type="com.delorme.exercise11.Contravention" />
        <variable
            name="color"
            type="com.delorme.exercise11.FieldsColor" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/idContraventionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:inputType="textPersonName"
        android:text="@={contravention.nom}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/idErreurChamp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/strLabelNom"
        android:textColor="@{ContextCompat.getColor(context, color.lastName)}"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNom"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/idErreurChamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/strErreurChamp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/strLabelPrenom"
        android:textColor="@{ContextCompat.getColor(context, color.firstName)}"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextPrenom"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPrenom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:text="@={contravention.prenom}"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextNom" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/strLabelZone"
        android:textColor="@{ContextCompat.getColor(context, color.limiteVitesse)}"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrenom" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/limite_vitesse"
        app:selectedSpeedLimit="@={contravention.limiteDeVitesse}"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/idZoneScolaire"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/idZoneScolaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:checked="@={contravention.scolaireConstruction}"
        android:text="@string/strLabelZoneScolaire"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.333" />

    <EditText
        android:id="@+id/editTextMontantAmende"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:text="@={contravention.montantDeAmende}"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strLabelMontantAmende"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextVitesse"
        app:layout_constraintEnd_toStartOf="@+id/editTextMontantAmende"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextVitesse" />

    <EditText
        android:id="@+id/editTextVitesse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@={contravention.vitesse}"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:text="@string/strLabelVitesse"
        android:textColor="@{ContextCompat.getColor(context, color.vitesse)}"
        app:layout_constraintEnd_toStartOf="@+id/editTextVitesse"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>